--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,16 +20,16 @@ foo:
 
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: /docs/quick-start-guide/
-  - title: "About"
-    url: /about/
-  - title: "Sample Posts"
-    url: /year-archive/
-  - title: "Sample Collections"
-    url: /collection-archive/
-  - title: "Terms &amp; Privacy Policy"
-    url: /terms/
+#  - title: "Quick-Start Guide"
+ #   url: /docs/quick-start-guide/
+  #- title: "About"
+   # url: /about/
+  #- title: "Sample Posts"
+   # url: /year-archive/
+  #- title: "Sample Collections"
+   # url: /collection-archive/
+  #- title: "Terms &amp; Privacy Policy"
+   # url: /terms/
   - title: "Portfolio"
     url: https://www.notion.so/9474098194aa4ddf9f6655053760d84b
   - title: "Posts"
@@ -42,8 +42,6 @@ main:
     url: /page-archive/
   - title: "Collections"
     url: /collection-archive/
-  - title: "External Link"
-    url: https://google.com
 
 
 # documentation links
