--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "/assets/images/michael-rose.jpg"
-  bio              : "Just another *boring*, *tattooed*, *time traveling*, *designer*."
+  bio              : #"Just another *boring*, *tattooed*, *time traveling*, *designer*."
   location         : "Seoul, Korea"
   links:
    # - label: "Made Mistakes"
